envoy.webrtc.yaml
static_resources:
  listeners:
    - name: emulator_http_webrtc
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: emulator_site_webrtc
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/android.emulation.control.Rtc"
                          route:
                            cluster: emulator_service_grpc_webrtc
                            timeout: 0s
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                        - match:
                            prefix: "/android.emulation.control.EmulatorController"
                          route:
                            cluster: emulator_service_grpc_webrtc
                            timeout: 0s
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                        - match:
                            prefix: "/bridge/"
                          route:
                            cluster: bridge_webrtc
                            prefix_rewrite: "/"
                            timeout: 0s
                        - match:
                            prefix: "/api/"
                          route:
                            cluster: apkbridge_webrtc
                            prefix_rewrite: "/"
                            timeout: 0s
                        - match:
                            prefix: "/"
                          route:
                            cluster: frontend_webrtc
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: emulator_service_grpc_webrtc
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: emulator_service_grpc_webrtc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: emulator-webrtc
                      port_value: 8554

    - name: frontend_webrtc
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: frontend_webrtc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: frontend-webrtc
                      port_value: 80

    - name: apkbridge_webrtc
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: apkbridge_webrtc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: apkbridge-webrtc
                      port_value: 5000

    - name: bridge_webrtc
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: bridge_webrtc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: bridge-webrtc
                      port_value: 8090

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
